add CTA list banner

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
@@ -1,6 +1,7 @@
-title_1: "Innovative,"
-title_2: "Accessible"
-title_3: "Healthcare."
+title_top: "Innovative,"
+title_middle: "Accessible"
+title_bottom: "Healthcare."
+image: "../../images/th-mark.svg"
 subtitle: "Connecting you to the services you need."
 links:
   - text: "My TowerHealth"
@@ -14,7 +15,7 @@ links:
     icon: "th-find-hospital.svg"
   - text: "Request an Appointment"
     url: "/"
-    icon: "th-cal.svg"  
+    icon: "th-cal.svg"
   - text: "Bill Pay & Insurance"
     url: "/"
     icon: "th-bill.svg"
