--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -157,6 +157,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
   field_location_ref:
     weight: 9
@@ -164,6 +165,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -175,7 +177,14 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
+  field_metatags:
+    weight: 124
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
+    region: content
   field_service_core_bool:
     weight: 9
     settings: {  }
@@ -188,6 +197,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -228,12 +238,6 @@ content:
       match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
-    region: content
-  field_metatags:
-    weight: 124
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_firehose
     region: content
   moderation_state:
     type: moderation_state_default
