--- a/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
+++ b/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
@@ -1,17 +1,18 @@
 uuid: 45b28758-90ef-4925-a25a-7cab59b9b23e
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.find_a_provider
   module:
+    - system
     - views
   theme:
     - tower_health
 id: exposedformfind_a_providerfind_doctor
 theme: tower_health
-region: page_header
-weight: -10
+region: header
+weight: -9
 provider: null
 plugin: 'views_exposed_filter_block:find_a_provider-find_doctor'
 settings:
@@ -20,4 +21,9 @@ settings:
   provider: views
   label_display: visible
   views_label: 'Find a Provider'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/find-a-provider\r\n/find-a-provider*"
+    negate: false
+    context_mapping: {  }
