--- a/config/sites/default/facets.facet.gender.yml
+++ b/config/sites/default/facets.facet.gender.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - search_api
 id: gender
-name: 'Gender » String'
+name: Gender
 url_alias: gender
 weight: -2
 min_count: 1
@@ -26,7 +26,7 @@ widget:
     show_reset_link: 0
     reset_text: 'Show all'
     hide_reset_when_no_selection: 0
-query_operator: or
+query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
@@ -38,12 +38,6 @@ processor_configs:
     processor_id: active_widget_order
     weights:
       sort: 20
-    settings:
-      sort: DESC
-  count_widget_order:
-    processor_id: count_widget_order
-    weights:
-      sort: 30
     settings:
       sort: DESC
   display_value_widget_order:
