add article card

--- a/config/sites/default/core.entity_view_display.node.article.card.yml
+++ b/config/sites/default/core.entity_view_display.node.article.card.yml
@@ -1,8 +1,9 @@
-uuid: 85e10561-6087-4a5e-afe6-693fd5599cc9
+uuid: b5dd3240-9312-49cb-9619-6f42ceeda2b1
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.card
     - field.field.node.article.body
     - field.field.node.article.field_article_date
     - field.field.node.article.field_article_teaser
@@ -13,43 +14,44 @@ dependencies:
     - metatag
     - text
     - user
-id: node.article.default
+id: node.article.card
 targetEntityType: node
 bundle: article
-mode: default
+mode: card
 content:
   body:
     label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
+    type: text_summary_or_trimmed
+    weight: 1
+    settings:
+      trim_length: 600
     third_party_settings: {  }
     region: content
   field_article_date:
-    weight: 103
+    type: datetime_default
+    weight: 3
+    region: content
     label: hidden
     settings:
       timezone_override: ''
       format_type: long_date
     third_party_settings: {  }
-    type: datetime_default
-    region: content
   field_article_teaser:
-    weight: 104
+    type: text_default
+    weight: 4
+    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: text_default
-    region: content
   field_metatags:
-    weight: 102
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
