--- a/config/sites/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.article.teaser.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
+    - field.field.node.article.field_article_date
+    - field.field.node.article.field_article_teaser
+    - field.field.node.article.field_metatags
     - node.type.article
   module:
     - text
@@ -28,5 +31,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_article_date: true
+  field_article_teaser: true
   field_metatags: true
   search_api_excerpt: true
