--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
@@ -207,3 +207,96 @@ cta:
     text: "484-628-HELP"
     icon: "th-cal.svg"
     variation: "right"
+careCircle:
+  title: Compassionate Care Principles
+  url: "#"
+  items:
+    - icon: ../../images/icons/th-bill.svg
+      icon_alt: alt text
+      url: "#"
+      label: Find a Provider
+    - icon: ../../images/icons/th-cal.svg
+      icon_alt: alt text
+      url: "#"
+      label: Schedule an Appointment
+      color: healing
+    - icon: ../../images/icons/th-emergency-time.svg
+      icon_alt: alt text
+      url: "#"
+      label: Attend Appointment
+      color: uplifting
+    - icon: ../../images/icons/th-find-hospital.svg
+      icon_alt: alt text
+      url: "#"
+      label: Follow-up with Provider
+      color: wisdom
+    - icon: ../../images/icons/th-find-provider.svg
+      icon_alt: alt text
+      url: "#"
+      label: Recieve treatment
+      color: growth
+    - icon: ../../images/icons/th-medal.svg
+      icon_alt: alt text
+      url: "#"
+      label: Review Forms in MyTowerHealth
+      color: tranquil
+    - icon: ../../images/icons/th-my-tower.svg
+      icon_alt: alt text
+      url: "#"
+      label: Leave a Review
+      color: energy
+    - icon: ../../images/icons/th-services.svg
+      icon_alt: alt text
+      url: "#"
+      label: Schedule Follow-up
+      color: pink
+  content:
+    title: Lorem ipsum dolor sit amet
+    text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ullam aut perferendis, eum odio doloremque rerum cupiditate libero excepturi sit ea esse labore blanditiis alias, molestiae a reiciendis. Accusantium, aliquam?
+careCircleFull:
+  fullWidth: true
+  title: Compassionate Care Principles
+  url: "#"
+  items:
+    - icon: ../../images/icons/th-bill.svg
+      icon_alt: alt text
+      url: "#"
+      label: Find a Provider
+    - icon: ../../images/icons/th-cal.svg
+      icon_alt: alt text
+      url: "#"
+      label: Schedule an Appointment
+      color: healing
+    - icon: ../../images/icons/th-emergency-time.svg
+      icon_alt: alt text
+      url: "#"
+      label: Attend Appointment
+      color: uplifting
+    - icon: ../../images/icons/th-find-hospital.svg
+      icon_alt: alt text
+      url: "#"
+      label: Follow-up with Provider
+      color: wisdom
+    - icon: ../../images/icons/th-find-provider.svg
+      icon_alt: alt text
+      url: "#"
+      label: Recieve treatment
+      color: growth
+    - icon: ../../images/icons/th-medal.svg
+      icon_alt: alt text
+      url: "#"
+      label: Review Forms in MyTowerHealth
+      color: tranquil
+    - icon: ../../images/icons/th-my-tower.svg
+      icon_alt: alt text
+      url: "#"
+      label: Leave a Review
+      color: energy
+    - icon: ../../images/icons/th-services.svg
+      icon_alt: alt text
+      url: "#"
+      label: Schedule Follow-up
+      color: pink
+  content:
+    title: Lorem ipsum dolor sit amet
+    text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ullam aut perferendis, eum odio doloremque rerum cupiditate libero excepturi sit ea esse labore blanditiis alias, molestiae a reiciendis. Accusantium, aliquam?
