--- a/config/sites/default/block.block.search.yml
+++ b/config/sites/default/block.block.search.yml
@@ -1,6 +1,6 @@
 uuid: 8589fce6-7055-42ed-9850-2653e61327b2
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.search
