theme config basic page and paragraphs

--- a/config/sites/default/field.field.paragraph.basic_header.field_basic_header_img.yml
+++ b/config/sites/default/field.field.paragraph.basic_header.field_basic_header_img.yml
@@ -1,17 +1,16 @@
-uuid: 33431b68-c87e-40c4-b982-09905319451b
+uuid: 53f82e3a-0d05-4517-940b-8e66a1d7223c
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_media
+    - field.storage.paragraph.field_basic_header_img
     - media.type.image
-    - media.type.remote_video
-    - node.type.page
-id: node.page.field_media
-field_name: field_media
-entity_type: node
-bundle: page
-label: Media
+    - paragraphs.paragraphs_type.basic_header
+id: paragraph.basic_header.field_basic_header_img
+field_name: field_basic_header_img
+entity_type: paragraph
+bundle: basic_header
+label: Image
 description: ''
 required: false
 translatable: false
@@ -22,9 +21,8 @@ settings:
   handler_settings:
     target_bundles:
       image: image
-      remote_video: remote_video
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: image
+    auto_create_bundle: ''
 field_type: entity_reference
