--- a/config/sites/default/field.field.paragraph.basic_header.field_basic_header_cta_ref.yml
+++ b/config/sites/default/field.field.paragraph.basic_header.field_basic_header_cta_ref.yml
@@ -1,19 +1,19 @@
-uuid: fe7b996d-5aed-4371-978b-a269ea53033c
+uuid: 1987d8f3-203b-454b-9349-13a5c6529e98
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_basic_components
-    - node.type.page
+    - field.storage.paragraph.field_basic_header_cta_ref
     - paragraphs.paragraphs_type.basic_header
+    - paragraphs.paragraphs_type.header_cta
   module:
     - entity_reference_revisions
-id: node.page.field_basic_components
-field_name: field_basic_components
-entity_type: node
-bundle: page
-label: Components
-description: 'Add components to this page'
+id: paragraph.basic_header.field_basic_header_cta_ref
+field_name: field_basic_header_cta_ref
+entity_type: paragraph
+bundle: basic_header
+label: 'Call To Action'
+description: ''
 required: false
 translatable: false
 default_value: {  }
@@ -23,36 +23,39 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      basic_header: basic_header
+      header_cta: header_cta
     target_bundles_drag_drop:
-      education:
-        weight: 3
-        enabled: false
-      rating_comments:
-        weight: 4
-        enabled: false
       basic_header:
-        enabled: true
-        weight: 11
-      card:
         weight: 12
         enabled: false
-      cards:
+      card:
         weight: 13
         enabled: false
-      homepage_hero:
+      cards:
+        weight: 14
+        enabled: false
+      education:
         weight: 15
         enabled: false
-      on_my_way:
+      header_cta:
+        enabled: true
         weight: 16
-        enabled: false
-      patient_story:
+      homepage_hero:
         weight: 17
         enabled: false
-      recognition_card:
+      on_my_way:
+        weight: 18
+        enabled: false
+      patient_story:
         weight: 19
         enabled: false
-      recognition_cards:
+      rating_comments:
         weight: 20
+        enabled: false
+      recognition_card:
+        weight: 21
+        enabled: false
+      recognition_cards:
+        weight: 22
         enabled: false
 field_type: entity_reference_revisions
