--- a/config/sites/default/field.storage.paragraph.field_basic_header_img.yml
+++ b/config/sites/default/field.storage.paragraph.field_basic_header_img.yml
@@ -1,13 +1,13 @@
-uuid: 92d928a1-7a50-4760-a1fc-50c2d0ef7336
+uuid: 81f93763-c2e1-4169-af5f-859bd6d14cfe
 langcode: en
 status: true
 dependencies:
   module:
     - media
-    - node
-id: node.field_media
-field_name: field_media
-entity_type: node
+    - paragraphs
+id: paragraph.field_basic_header_img
+field_name: field_basic_header_img
+entity_type: paragraph
 type: entity_reference
 settings:
   target_type: media
