--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_basic_components
+    - field.field.node.page.field_basic_enable_nav
+    - field.field.node.page.field_basic_header
+    - field.field.node.page.field_basic_sidebar
     - field.field.node.page.field_metatags
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
@@ -24,36 +27,67 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_basic_components:
     type: entity_reference_paragraphs
-    weight: 125
+    weight: 2
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: Components
+      title_plural: Components
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
+    third_party_settings: {  }
+    region: content
+  field_basic_enable_nav:
+    weight: 3
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_basic_header:
+    type: entity_reference_paragraphs
+    weight: 1
+    settings:
+      title: 'Header or Hero'
+      title_plural: 'Header or Heros'
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
+    third_party_settings: {  }
+    region: content
+  field_basic_sidebar:
+    type: entity_reference_paragraphs
+    weight: 4
+    settings:
+      title: Sidebar
+      title_plural: Sidebars
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_metatags:
-    weight: 126
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_reference_access_control:
-    weight: 123
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_text:
-    weight: 122
+    weight: 13
     settings:
       rows: 5
       placeholder: ''
@@ -62,13 +96,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 11
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -76,26 +110,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 7
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 12
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 8
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -112,7 +146,7 @@ content:
       match_limit: 10
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
