--- a/config/sites/default/core.entity_view_display.node.page.default.yml
+++ b/config/sites/default/core.entity_view_display.node.page.default.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_basic_components
+    - field.field.node.page.field_basic_enable_nav
+    - field.field.node.page.field_basic_header
+    - field.field.node.page.field_basic_sidebar
     - field.field.node.page.field_metatags
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
@@ -21,14 +24,32 @@ bundle: page
 mode: default
 content:
   content_moderation_control:
-    weight: 0
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_basic_components:
     type: entity_reference_revisions_entity_view
-    weight: 5
-    label: above
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_basic_header:
+    type: entity_reference_revisions_entity_view
+    weight: 0
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_basic_sidebar:
+    type: entity_reference_revisions_entity_view
+    weight: 2
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -36,23 +57,24 @@ content:
     region: content
   field_metatags:
     weight: 6
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_text:
     weight: 3
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   links:
-    weight: 1
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_basic_enable_nav: true
   field_reference_access_control: true
   search_api_excerpt: true
