--- a/config/sites/default/block.block.clear_filters.yml
+++ b/config/sites/default/block.block.clear_filters.yml
@@ -1,16 +1,15 @@
-uuid: 2ac91fe9-3ab1-415f-9ad9-e79737f6eaf6
+uuid: cb613cb1-af8c-4137-8a99-1a92c5c8b75a
 langcode: en
 status: false
 dependencies:
   module:
-    - system
     - towerhealth_misc
   theme:
     - tower_health
-id: clearfilters
+id: clear_filters
 theme: tower_health
 region: page_filters
-weight: -5
+weight: 0
 provider: null
 plugin: clear_filters
 settings:
@@ -18,9 +17,4 @@ settings:
   label: 'Clear filters'
   provider: towerhealth_misc
   label_display: '0'
-visibility:
-  request_path:
-    id: request_path
-    pages: "/find-a-provider\r\n/find-a-provider*\r\n/find-a-location\r\n/find-a-location*"
-    negate: false
-    context_mapping: {  }
+visibility: {  }
