--- a/config/sites/default/facets.facet.provider_type.yml
+++ b/config/sites/default/facets.facet.provider_type.yml
@@ -32,7 +32,7 @@ expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
 hard_limit: 0
 exclude: false
-only_visible_when_facet_source_is_visible: true
+only_visible_when_facet_source_is_visible: false
 processor_configs:
   count_widget_order:
     processor_id: count_widget_order
