--- a/config/sites/default/facets.facet.specialties.yml
+++ b/config/sites/default/facets.facet.specialties.yml
@@ -26,7 +26,7 @@ widget:
     show_reset_link: 0
     reset_text: 'Show all'
     hide_reset_when_no_selection: 0
-query_operator: and
+query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
