--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
@@ -62,7 +62,7 @@ items:
   - name: $growth-ltst
     value: '#e4edd7'
   - name: $tranquil-aa
-    value: '#247E84'
+    value: '#247e84'
   - name: $tranquil
     value: '#3fc1cb'
   - name: $tranquil-med
@@ -74,7 +74,7 @@ items:
   - name: $tranquil-ltst
     value: '#dbf0f4'
   - name: $energy-aa
-    value: '#BE5409'
+    value: '#be5409'
   - name: $energy
     value: '#f47820'
   - name: $energy-med
