--- a/config/sites/default/core.entity_view_display.node.page.page_header.yml
+++ b/config/sites/default/core.entity_view_display.node.page.page_header.yml
@@ -1,8 +1,9 @@
-uuid: 49036bbb-7a22-4c3e-a07d-9a258a005688
+uuid: b4961899-ecb9-4309-baa4-6c6d9b723453
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.page_header
     - field.field.node.page.field_basic_components
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
@@ -13,22 +14,15 @@ dependencies:
     - node.type.page
   module:
     - entity_reference_revisions
-    - metatag
-    - text
     - user
 _core:
   default_config_hash: g1S3_GLaxq4l3I9RIca5Mlz02MxI2KmOquZpHw59akM
-id: node.page.default
+id: node.page.page_header
 targetEntityType: node
 bundle: page
-mode: default
+mode: page_header
 content:
-  content_moderation_control:
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_basic_components:
+  field_basic_header:
     type: entity_reference_revisions_entity_view
     weight: 0
     label: hidden
@@ -37,36 +31,13 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
-  field_basic_sidebar:
-    type: entity_reference_revisions_entity_view
-    weight: 1
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_metatags:
-    weight: 5
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
-  field_text:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  links:
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
+  field_basic_components: true
   field_basic_enable_nav: true
-  field_basic_header: true
+  field_basic_sidebar: true
+  field_metatags: true
   field_reference_access_control: true
+  field_text: true
+  links: true
   search_api_excerpt: true
