--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
@@ -32,6 +32,13 @@ form_sections:
 results_shown: 1-10
 results_count: 321
 teasers:
+  - details:
+      title: "Advanced Stroke Care Video"
+      meta: 'Karen Hoerst, MD'
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+      videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+      thumb: ../../images/video-placeholder-1.png
+    type: "video"
   - img:
       src: "../../images/people/Roland-Donald.jpg"
       alt: "Alternative Text"
